2005-07-27  Sebastien Bacher  <seb128@debian.org>

	* capplet-util.c: (capplet_set_icon): set a default icon for capplets, 
	patch by Jaap A. Haitsma <jaap@haitsma.org> (Closes: #305086).

2005-07-11  Rodney Dawes  <dobey@novell.com>

	* capplet-util.c (capplet_set_icon): Remove the unref call on the
	GtkIconTheme object to avoid crashing

	Fixes #310037

2005-07-10  Rodney Dawes  <dobey@novell.com>

	* capplet-util.c (capplet_set_icon): Update to use the GtkIconTheme
	API instead of the deprecated GnomeIconTheme API
	Based on patch from Jan de Groot

	Fixes #171679

2005-06-30  William Jon McCann  <mccann@jhu.edu>

	* file-transfer-dialog.c: Don't include gnome.h
	(file_transfer_dialog_update_num_files) 
	(file_transfer_dialog_set_prop, eel_gtk_label_make_bold) 
	(create_titled_label, file_transfer_dialog_init) 
	(file_transfer_dialog_update_cb):
	HIG updates and make consistent with nautilus transfer
	progress dialog.

2005-03-02  Shakti Sen  <shprasad@novell.com>

	* gnome-theme-info.c (read_icon_theme): Do not add the Icon Theme if
	the key 'Hidden' is 'true' in the index.theme file.

	Fixes bug #168348

2005-05-22  Sebastien Bacher  <seb128@debian.org>

	* gconf-property-editor.c: (peditor_font_value_changed),
	(peditor_font_widget_changed), (gconf_peditor_new_font):
	* gconf-property-editor.h: 
	port of the font capplet to gtk_font_button and some cleanup, 
	patch from paolo borelli <pborelli@katamail.com> (Closes: #160016).

2005-05-22  Sebastien Bacher  <seb128@debian.org>

	* theme-thumbnail.c: (create_image): fix the theme preview crasher with
	xorg/composite, patch from Colin Gibbs <colin@gibbsonline.net>
	(Closes: #152490).

2005-02-08  Sebastien Bacher  <seb128@debian.org>

	* gnome-theme-info.c: (update_common_theme_dir_index):
	* theme-thumbnail.c: (create_image):
	patch by Kjartan Maraas <kmaraas@gnome.org>, move to use GtkIconTheme
	and remove a load of leaks in the theme manager code (Closes: #166267).
