@@ -1,3 +1,12 @@
+2005-08-14  Rodney Dawes  <dobey@novell.com>
+
+	* theme-thumbnail.c (create_image): Get the Example icon that is
+	specified by the icon theme, if it exists, and then fall back through
+	a better list of icons to use. Gnome uses gnome-fs-directory currently
+	for folders, so we should prefer that over folder, but the icon naming
+	spec lists x-directory-normal for standard folders, so we should prefer
+	that above other folders
+
 2005-07-27  Sebastien Bacher  <seb128@debian.org>
 
 	* capplet-util.c: (capplet_set_icon): set a default icon for capplets, 
